# yeelight-core

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  THREAD_PICKUP_2026-05-27.md  pyproject.toml
.github/: SECRETS.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/superpowers/specs/: 2026-05-17-unified-bulb-stack-design.md  2026-05-19-unified-bulb-stack-amendments.md
systemd/: yeelight-core.service
tests/: conftest.py  test_api.py  test_api_all.py  test_api_onboard.py  test_config.py  test_discover.py  test_driver.py  test_main_smoke.py  test_onboard.py  test_registry.py  test_scenes.py
yeelight_core/: __init__.py  api.py  cli.py  config.py  discover.py  driver.py  main.py  onboard.py  registry.py  scenes.py
